[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Tiles/tile_0236.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tiles/tile_0234.png" type="Texture" id=2]
[ext_resource path="res://SawBladeEnemy.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 7.32607

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "dying",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "flying",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]

[node name="SawBladeEnemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2147483650
collision_mask = 5
script = ExtResource( 4 )

[node name="SpinUpTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SpinCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DyingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="TintTween" type="Tween" parent="AnimatedSprite"]

[node name="HitCollision" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
collision_layer = 0

[node name="HitCollisionShape" type="CollisionShape2D" parent="HitCollision"]
position = Vector2( 0.5, 0 )
shape = SubResource( 3 )
[connection signal="timeout" from="SpinUpTimer" to="." method="_on_SpinUpTimer_timeout"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
[connection signal="timeout" from="SpinCooldownTimer" to="." method="_on_SpinCooldownTimer_timeout"]
[connection signal="timeout" from="DyingTimer" to="." method="_on_DyingTimer_timeout"]
[connection signal="area_entered" from="HitCollision" to="." method="_on_HitCollision_area_entered"]
